--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,19 +3,21 @@ environment:
   # Note: TWINE_PASSWORD is set in Appveyor settings
 
 build_script:
+  - # Upgrade setuptools to get it to identify the package name.
+  - pip install -U setuptools
   # First clone the specific release tag, then move interesting contents into CWD.
   - git clone --branch 2.0.3 --single-branch --depth 1 https://github.com/SethMMorton/fastnumbers.git repo
   - move repo\include .
   - move repo\src .
   - move repo\setup.* .
   - dir
-  - C:\\Python36-x64\python.exe setup.py --name
+  - python setup.py --name
   # Install and execute the builder.
-  - C:\\Python36-x64\python.exe -m pip install cibuildwheel==0.8.0
-  - C:\\Python36-x64\python.exe -m cibuildwheel --output-dir wheelhouse
+  - pip install cibuildwheel==0.8.0
+  - cibuildwheel --output-dir wheelhouse
   # Release the built wheels.
-  - echo C:\\Python36-x64\python.exe -m pip install twine
-  - echo C:\\Python36-x64\python.exe -m twine upload wheelhouse/*.whl
+  - echo python -m pip install twine
+  - echo python -m twine upload wheelhouse/*.whl
 
 artifacts:
   - path: "wheelhouse\\*.whl"
