--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,6 @@ build_script:
   - pip install cibuildwheel==0.8.0
   - cibuildwheel --output-dir wheelhouse
   # Release the built wheels.
-  - python -m pip install twine
-  - python -m twine upload wheelhouse/*.whl
+  - pip install twine
+  - twine upload wheelhouse/*.whl
 
