--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ script:
   - git clone --branch 2.0.3 --single-branch --depth 1 https://github.com/SethMMorton/fastnumbers.git repo
   - mv repo/setup.* repo/include repo/src .
   # Install and execute the builder.
-  - $PIP install cibuildwheel==0.8.0 twine
+  - $PIP install cibuildwheel==0.8.0
   - cibuildwheel --output-dir wheelhouse
   # Release the built wheels.
-  - twine upload wheelhouse/*.whl
+  - $PIP install twine
+  - python -m twine upload wheelhouse/*.whl
