--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
 script:
   # First clone the specific release tag, then move interesting contents into CWD.
   - git clone --branch 2.0.3 --single-branch --depth 1 https://github.com/SethMMorton/fastnumbers.git repo
-  - mv repo/setup.* repo/include repo/src .
+  - mv repo/setup.py repo/include repo/src .
   # Install and execute the builder.
   - $PIP install cibuildwheel==0.8.0
   - cibuildwheel --output-dir wheelhouse
