--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,11 @@ env:
 
 script:
   # First clone the specific release tag, then move interesting contents into CWD.
-  - git clone --branch 2.2.0 --single-branch --depth 1 https://github.com/SethMMorton/fastnumbers.git repo
+  - git clone --branch 2.2.1 --single-branch --depth 1 https://github.com/SethMMorton/fastnumbers.git repo
   - mv repo/setup.py repo/include repo/src .
   # Install and execute the builder.
-  - $PIP install cibuildwheel==0.9.4
+  - $PIP install -U wheel
+  - $PIP install cibuildwheel==0.10.2
   - cibuildwheel --output-dir wheelhouse
   # Release the built wheels.
   - $PIP install twine
